<resources>
    <string name="app_name">StandardConfig</string>
    <string name="dialog_progress_title">Aguarde...</string>
    <string name="title_error">Erro</string>
    <string name="message_error_network">Erro de rede</string>
    <string name="alert_genericerror_title">Erro</string>
    <string name="alert_permissionerror_message">Erro interno.</string>
    <string name="navigation_exit_title">Encerrar</string>
    <string name="navigation_exit_message">Deseja realmente sair da aplicação ?</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="configuration_configuration">Configurações</string>
    <string name="configuration_back">Voltar</string>
    <string name="configuration_confirm">Confirmar</string>
    <string name="configuration_server">Servidor</string>
    <string name="configuration_directory">Diretório</string>
    <string name="configuration_store">Filial</string>
    <string name="verify_update_version">Verificando atualização de versão...</string>
    <string name="download_apk">Carregando apk...</string>
    <string name="error_view">Erro na visualização</string>
    <string name="error_permission_denied">Dê permissão ao recurso recomendado.</string>
    <string name="usuario">Usuário</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="versao">Versão: 1.0.42</string>
    <string name="versao_description">Versão: </string>
    <string name="powered">Powered by:</string>
    <string name="usuario_dois_pontos">Usuário:</string>
    <string name="modulo_dois_pontos">Módulo:</string>
    <string name="perfil_dois_pontos">Perfil:</string>
    <string name="required_all_labels">Preencha todos os campos</string>
    <string name="error_auth">Erro Autenticação</string>
    <string name="deseja_sair">Deseja realmente sair ?</string>
    <string name="load_filial">Carregando filiais...</string>
    <string name="selecione_filial">Selecione a filial</string>
    <string name="fechar">Fechar</string>
    <string name="filial">Filiais</string>
    <string name="pref_filial_key">pref_filial_key</string>
    <string name="pref_filial">Filial</string>
    <string name="user_not_auth">Sessão expirada ou usuário não autenticado</string>
    <string name="ok">OK</string>
    <string name="autenticando">Autenticando</string>
</resources>
