<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight=".3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/configuration_configuration"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_weight=".5"
        android:orientation="vertical">


        <!--        <android.support.design.widget.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <EditText
            android:id="@+id/etServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/configuration_server"
            android:inputType="text" />

        <!--        </android.support.design.widget.TextInputLayout>-->


        <!--        <android.support.design.widget.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <EditText
            android:id="@+id/etDirectory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/configuration_directory"
            android:inputType="text" />
        <!--        </android.support.design.widget.TextInputLayout>-->


        <!--        <android.support.design.widget.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <EditText
            android:id="@+id/etStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/configuration_store"
            android:inputType="text" />
        <!--        </android.support.design.widget.TextInputLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/configuration_back" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight=".5"
            android:text="@string/configuration_confirm" />
    </LinearLayout>

</LinearLayout>