<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_gravity="top"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageCliente"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="start" />
        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/usuario_dois_pontos"
            android:textAppearance="@style/TextAppearance.Small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvModulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/modulo_dois_pontos"
            android:textAppearance="@style/TextAppearance.Small" />
        <TextView
            android:id="@+id/tvPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/perfil_dois_pontos"
            android:textAppearance="@style/TextAppearance.Small" />

    </LinearLayout>


</LinearLayout>