<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/usuario"
            android:textAppearance="@style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:ems="10"
            android:textAppearance="@style/TextAppearance.Medium"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/senha"
            android:textAppearance="@style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:ellipsize="none"
            android:ems="10"
            android:textAppearance="@style/TextAppearance.Medium"
            android:inputType="textPassword"
            android:scrollbarStyle="outsideOverlay" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/entrar"
            style="@style/ButtonColorAccent"/>

       <include layout="@layout/principal_layout_rodape"/>

    </LinearLayout>
</ScrollView>